# MS_CLE

./: .gitignore  AGENTS.md  AUDIT.md  CLE.py  GeoTec.py  Indagini.py  Indagini_py.py  MS1.py  NEXT_STEPS.md  PROJECT_STATUS.md  README.md  RUNBOOK.md  pyproject.toml  requirements.txt
huxleyi_ms_cle/: __init__.py  __main__.py  build.py  cli.py  common.py  config.py  mdb.py  reports.py
huxleyi_ms_cle/reporting/: __init__.py  html_out.py  json_out.py  models.py  writers.py
huxleyi_ms_cle/validators/: __init__.py  cle_validations.py  fs_structure.py  geometry_checks.py  ms_validations.py
schemas/: catalog.yaml  fs_structure.yaml  layers_minimal.yaml
schemas/delivery/: build_actions.yaml  domains.yaml  layers.yaml  mdb.yaml  topology.yaml
schemas/dicts/: geotec.yaml  indagini.yaml
schemas/incoming/: domains.yaml  fs_structure.yaml  layers.yaml  mappings.yaml  mdb.yaml  topology.yaml
scripts/: geotec.py  indagini.py  ms1.py  validate.py
tests/: conftest.py  test_build.py  test_fs_structure.py  test_ingest.py  test_mdb.py  test_mdb_relations.py  test_normalize.py  test_scan.py  test_validate.py  test_validate_reports.py
tools/: export_domain_stats.py  extract_dicts_from_legacy.py
